--- a/resources/global.css
+++ b/resources/global.css
@@ -18,6 +18,15 @@ body {
     transition: opacity 0.5s;
 }
 
+.post, #no_more_posts {
+    margin: 10px auto;
+    padding: 10px;
+    background: #E6E3E1;
+    width: 100%;
+    max-width: 1000px;
+    box-sizing: border-box;
+}
+
 .alert_container {
     width: 100%;
     height: 100%;
