--- a/resources/global.css
+++ b/resources/global.css
@@ -1,39 +1,16 @@
 body, html {
     width: 100%;
     height: 100%;
-}
-
-body {
     margin: 0;
-    background: #182032;
-    font-family: AktivGroteskStd, sans-serif;
-    color: #602B24;
-}
-
-.page {
-    -webkit-transition: opacity 0.5s;
-    -moz-transition: opacity 0.5s;
-    -ms-transition: opacity 0.5s;
-    -o-transition: opacity 0.5s;
-    transition: opacity 0.5s;
-}
-
-.post, #no_more_posts {
-    margin: 10px auto;
-    padding: 10px;
-    background: #E6E3E1;
-    width: 100%;
-    max-width: 1000px;
-    box-sizing: border-box;
-}
-
-.alert_container {
-    width: 100%;
-    height: 100%;
 }
 
 #alert_container {
     height: 100%;
+    width: 100%;
+    background: rgba(30, 30, 30, 0.7);
+    top: 0;
+    left: 0;
+    position: fixed;
     display: flex;
     justify-content: center;
     align-items: center;
