--- a/admin/resources/admin.css
+++ b/admin/resources/admin.css
@@ -2,6 +2,7 @@ body {
     background: #222;
     font-weight: 100;
     font-family: AktivGroteskStd, sans-serif;
+    overflow: hidden;
 }
 
 #content {
@@ -24,13 +25,14 @@ body {
 }
 
 #menu_bar {
-    background: #222;
+    background: #262626;
     width: 100%;
     height: 50px;
     position: fixed;
     top: 0;
     left: 0;
     z-index: 100;
+    border-bottom: 1px solid #aaa;
 }
 
 #code_window {
@@ -42,6 +44,7 @@ body {
     padding-top: 50px;
     background: #333;
     box-sizing: border-box;
+    overflow: scroll;
 }
 
 #divider {
@@ -49,7 +52,7 @@ body {
     width: 100%;
     height: 2px;
     margin-top: -1px;
-    background: #999;
+    background: #aaa;
     position: fixed;
     top: 50%;
     cursor: ns-resize;
