--- a/admin/resources/admin.css
+++ b/admin/resources/admin.css
@@ -41,7 +41,6 @@ button {
     line-height: 0px;
     color: #fff;
     cursor: pointer;
-    float: right;
 }
 
 #content {
@@ -76,8 +75,33 @@ button {
     box-sizing: border-box;
 }
 
+#action_button, #delete_button {
+    float: right;
+}
+
 #delete_button {
     border: 1px solid #a00;
+}
+
+#image_choose {
+    background: rgba(0, 0, 0, 0);
+    border: none;
+    color: #333;
+}
+
+#progress_outer {
+    width: 100%;
+    height: 28px;
+    margin-top: 10px;
+    background: #999;
+    transition: opacity 0.5s;
+}
+
+#progress_inner {
+    width: 0;
+    background: #333;
+    height: 28px;
+    transition: width 0.5s;
 }
 
 #code_window {
