--- a/resources/blog.css
+++ b/resources/blog.css
@@ -24,3 +24,21 @@
     border-radius: 50%;
     border: 3px solid #666;
 }
+
+.post_title {
+    display: inline-block;
+    width: 50%;
+    font-size: 24px;
+    margin-bottom: 20px;
+    overflow: hidden;
+}
+
+.post_date {
+    position: relative;
+    display: inline-block;
+    float: right;
+    text-align: right;
+    color: #aaa;
+    line-height: 24px;
+    overflow: hidden;
+}
