--- a/resources/blog.css
+++ b/resources/blog.css
@@ -3,6 +3,7 @@
     margin: 0 auto;
     padding: 10px 10px 10px 100px;
     box-sizing: border-box;
+    transition: padding 0.5s;
 }
 
 .post, #no_more_posts {
@@ -23,6 +24,7 @@
     background-repeat: no-repeat;
     border-radius: 50%;
     border: 3px solid #666;
+    transition: 0.5s;
 }
 
 .post_title {
