--- a/admin/resources/admin.css
+++ b/admin/resources/admin.css
@@ -43,6 +43,10 @@ button {
     cursor: pointer;
 }
 
+select {
+    width: 120px;
+}
+
 #content {
     height: 100%;
     width: 100%;
@@ -66,13 +70,18 @@ button {
     background: #262626;
     width: 100%;
     height: 50px;
-    position: fixed;
+    position: relative;
     top: 0;
     left: 0;
     z-index: 100;
     border-bottom: 1px solid #aaa;
     padding: 10px;
     box-sizing: border-box;
+    min-width: 1275px;
+}
+
+#menu_bar_container {
+    overflow: scroll;
 }
 
 #action_button, #delete_button {
@@ -215,4 +224,12 @@ button {
 .locked_select {
     pointer-events: none;
     opacity: 0.5;
+}
+
+#day_select {
+    width: 50px;
+}
+
+#year_select {
+    width: 65px;
 }
