--- a/resources/mobile.css
+++ b/resources/mobile.css
@@ -1,7 +1,6 @@
 @media screen and (max-width: 800px) {
     #blog_page {
         padding-left: 5px;
-        padding-top: 70px;
     }
 
     .post_author {
@@ -22,4 +21,8 @@
         background: #444;
         border-left: 1px solid #aa3f00;
      }
+
+    .post, #no_more_posts {
+        margin-top: 80px;
+    }
 }
