--- a/resources/main.css
+++ b/resources/main.css
@@ -2,8 +2,12 @@ body {
     background: #222;
     font-family: AktivGroteskStd, sans-serif;
     color: #ddd;
-    padding-top: 50px;
+    padding-top: 43px;
     box-sizing: border-box;
+}
+
+#content {
+    height: 100%;
 }
 
 #nav {
@@ -31,9 +35,16 @@ body {
 }
 
 .page {
+    height: 100%;
     -webkit-transition: opacity 0.5s;
     -moz-transition: opacity 0.5s;
     -ms-transition: opacity 0.5s;
     -o-transition: opacity 0.5s;
     transition: opacity 0.5s;
+}
+
+#coggle {
+    width: 100%;
+    height: 100%;
+    border: none;
 }
