--- a/resources/mobile.css
+++ b/resources/mobile.css
@@ -25,4 +25,20 @@
     .post {
         margin-top: 80px;
     }
+
+    .alert_button {
+        cursor: pointer;
+        width: 100%;
+        display: block;
+        background: #bbb;
+        text-align: center;
+        padding: 5px;
+        box-sizing: border-box;
+        margin-top: 10px;
+        -webkit-transition: color 0.5s;
+        -moz-transition: color 0.5s;
+        -ms-transition: color 0.5s;
+        -o-transition: color 0.5s;
+        transition: color 0.5s;
+    }
 }
