--- a/admin/resources/admin.css
+++ b/admin/resources/admin.css
@@ -21,6 +21,7 @@ select {
     margin: 0;
     border: 8px solid #333;
     cursor: pointer;
+    width: 100%;
 }
 
 input {
@@ -33,6 +34,7 @@ input {
     margin: 0;
     line-height: 14px;
     color: #fff;
+    width: 100%;
 }
 
 button {
@@ -45,10 +47,7 @@ button {
     line-height: 0px;
     color: #fff;
     cursor: pointer;
-}
-
-select {
-    width: 120px;
+    width: 100%;
 }
 
 #content {
@@ -70,31 +69,43 @@ select {
     width: 100%;
 }
 
-#menu_bar {
+#menu {
     background: #262626;
-    width: 100%;
-    height: 50px;
+    width: 300px;
+    height: 100%;
     position: relative;
     top: 0;
     left: 0;
     z-index: 100;
-    border-bottom: 1px solid #aaa;
+    border-right: 1px solid #666;
     padding: 10px;
     box-sizing: border-box;
-    min-width: 1275px;
-}
-
-#menu_bar_container {
     overflow: scroll;
+    line-height: 35px;
 }
 
-#action_button, #delete_button {
-    float: right;
+.CodeMirror.cm-s-lesser-dark {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    padding: 10px 10px 10px 300px;
+    box-sizing: border-box;
 }
 
 #delete_button {
     border: 1px solid #a00;
 }
+
+#action_button {
+    border: 1px solid #3381aa;
+}
+
+#month_select { width: 155px; }
+
+#day_select { width: 50px; }
+
+#year_select { width: 65px; }
 
 #image_choose {
     background: rgba(0, 0, 0, 0);
@@ -156,7 +167,6 @@ select {
     position: absolute;
     top: 0;
     left: 0;
-    padding-top: 50px;
     background: #333;
     box-sizing: border-box;
     overflow: scroll;
@@ -207,6 +217,18 @@ select {
     opacity: 0.15;
 }
 
+#logo_small {
+    background: url(../../resources/logo.png) no-repeat left center;
+    background-size: contain;
+    width: 100%;
+    height: 70px;
+    color: #aaa;
+    border: 10px solid rgba(0, 0, 0, 0);
+    padding-left: 60px;
+    box-sizing: border-box;
+    line-height: 55px;
+    margin-bottom: 2px;
+}
 
 #login_field {
     background: #333;
@@ -228,12 +250,4 @@ select {
 .locked_select {
     pointer-events: none;
     opacity: 0.5;
-}
-
-#day_select {
-    width: 50px;
-}
-
-#year_select {
-    width: 65px;
 }
