--- a/admin/resources/admin.css
+++ b/admin/resources/admin.css
@@ -22,6 +22,7 @@ select {
     border: 8px solid #333;
     cursor: pointer;
     width: 100%;
+    outline: none;
 }
 
 input {
@@ -35,6 +36,7 @@ input {
     line-height: 14px;
     color: #fff;
     width: 100%;
+    outline: none;
 }
 
 button {
@@ -90,6 +92,35 @@ button {
     position: absolute;
     top: 0;
     padding: 10px 10px 10px 300px;
+    box-sizing: border-box;
+}
+
+#style_editor {
+    width: 300px;
+    height: 100%;
+    -webkit-appearance: none;
+    border: none;
+    resize: none;
+    box-sizing: border-box;
+    color: #aaa;
+    padding: 10px;
+    font-family: monospace;
+    font-size: 14px;
+    background: #262626;
+    border-right: 1px solid #666;
+    outline: none;
+    z-index: 100;
+    position: absolute;
+    left: 0;
+    top: 0;
+    tab-size: 4;
+}
+
+#preview {
+    position: absolute;
+    padding-left: 300px;
+    top: 0;
+    width: 100%;
     box-sizing: border-box;
 }
 
@@ -161,7 +192,7 @@ button {
     transition: width 0.5s;
 }
 
-#code_window {
+#editor_top {
     width: 100%;
     height: 50%;
     position: absolute;
@@ -179,16 +210,18 @@ button {
 #divider {
     content: "";
     width: 100%;
-    height: 2px;
+    height: 1px;
     margin-top: -1px;
-    background: #aaa;
+    background: #000;
     position: fixed;
     top: 50%;
     cursor: ns-resize;
     z-index: 100;
+    border-top: 1px solid #aa3f00;
+    border-bottom: 1px solid #aa3f00;
 }
 
-#preview_window {
+#editor_bottom {
     width: 100%;
     height: 50%;
     position: absolute;
