Scrolling bug fix

--- a/admin/resources/admin.css
+++ b/admin/resources/admin.css
@@ -121,7 +121,9 @@ button {
     padding-left: 300px;
     top: 0;
     width: 100%;
+    height: 100%;
     box-sizing: border-box;
+    overflow: scroll;
 }
 
 #delete_button {
@@ -228,7 +230,6 @@ button {
     top: 50%;
     left: 0;
     background: #222;
-    overflow: scroll;
 }
 
 #logo {
