--- a/resources/blog.css
+++ b/resources/blog.css
@@ -1,4 +1,4 @@
-#blog_page, #post_page {
+#blog_page, #post_page, #search_page {
     max-width: 1000px;
     margin: 0 auto;
     padding: 10px 10px 10px 100px;
