--- a/resources/mobile.css
+++ b/resources/mobile.css
@@ -1,5 +1,5 @@
 @media screen and (max-width: 800px) {
-    #blog_page, #post_page {
+    #blog_page, #post_page, #search_page {
         padding-left: 5px;
     }
 
