--- a/resources/blog.css
+++ b/resources/blog.css
@@ -1,18 +1,19 @@
-#blog_page, #post_page, #search_page {
+#feed_page, #post_page, #search_page {
     max-width: 1000px;
     margin: 0 auto;
-    padding: 10px 10px 10px 100px;
+    padding: 10px;
     box-sizing: border-box;
     transition: padding, opacity 0.5s;
 }
 
 .post, .no_more_posts {
     padding: 10px;
-    background: #555;
-    color: #ddd;
+    background: #fff;
+    color: #333;
     box-sizing: border-box;
-    border-left: 1px solid #aa3f00;
+    border: 1px solid #ddd;
     margin-top: 10px;
+    border-radius: 3px;
 }
 
 .post_author {
@@ -24,7 +25,8 @@
     background-size: cover;
     background-repeat: no-repeat;
     border-radius: 50%;
-    border: 3px solid #666;
+    border: 1px solid #ddd;
+    box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.1);
     transition: 0.5s;
 }
 
