--- a/resources/main.css
+++ b/resources/main.css
@@ -1,7 +1,7 @@
 body {
-    background: #222;
+    background: #fff;
     font-family: AktivGroteskStd, sans-serif;
-    color: #ddd;
+    color: #333;
     padding-top: 43px;
     box-sizing: border-box;
 }
@@ -12,17 +12,20 @@ body {
 
 #nav {
     text-align: center;
-    background: #555;
+    background: #fff;
     position: fixed;
     width: 100%;
     top: 0;
     z-index: 100;
-    border-bottom: 1px solid #aa3f00;
+    border-bottom: 1px solid #ddd;
 }
 
 #nav_inner {
     width: 100%;
     max-width: 1000px;
+    padding-left: 10px;
+    padding-right: 10px;
+    box-sizing: border-box;
     text-align: left;
     margin-left: auto;
     margin-right: auto;
@@ -32,9 +35,8 @@ body {
     cursor: pointer;
     display: inline-block;
     padding: 10px;
-    color: #ddd;
+    color: #333;
     font-size: 18px;
-    font-weight: 800;
     transition: color 0.5s;
     -webkit-touch-callout: none;
     -webkit-user-select: none;
@@ -49,14 +51,16 @@ body {
 }
 
 #search_input {
-    border: none;
     padding: 8px 13px;
-    background: #333;
-    color: #fff;
+    background: #fff;
+    color: #333;
     font-size: 14px;
-    margin: 5px 0 0 0;
+    margin: 4px 0 0 0;
     display: inline-block;
     float: right;
+    border: 1px solid #ddd;
+    box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.1);
+    border-radius: 3px;
 }
 
 .page {
