--- a/resources/mobile.css
+++ b/resources/mobile.css
@@ -1,6 +1,32 @@
+#mobile_toggle {
+    background: url(mobile_toggle.png);
+    width: 25px;
+    height: 25px;
+    background-size: contain;
+    position: absolute;
+    margin-left: -35px;
+    margin-top: 10px;
+    cursor: pointer;
+    display: none;
+}
+
+@media screen and (max-width: 1200px) {
+    #feed_page, #post_page, #search_page {
+        padding: 10px 10px 10px 100px;
+    }
+}
+
 @media screen and (max-width: 800px) {
-    #blog_page, #post_page, #search_page {
-        padding-left: 5px;
+    #mobile_toggle {
+        display: block;
+    }
+
+    .show_nav {
+        right: 0 !important;
+    }
+
+    #feed_page, #post_page, #search_page {
+        padding-left: 10px;
     }
 
     .post_author {
@@ -18,8 +44,6 @@
         margin-top: -9px;
         width: 70px;
         height: 70px;
-        background: #444;
-        border-left: 1px solid #aa3f00;
      }
 
     .post {
@@ -42,15 +66,36 @@
         transition: color 0.5s;
     }
 
+    #nav_inner {
+        padding: 0;
+    }
+
     #search_input {
         width: 100%;
-        margin: 0;
+        margin: 0 0 10px;
         border-radius: 0;
         box-sizing: border-box;
         padding: 12px 13px;
+        border: none;
+        border-bottom: 1px solid #ddd;
+        box-shadow: none;
     }
 
     body {
-        padding-top: 90px;
+        padding-top: 0;
+    }
+
+    #nav {
+        width: 200px;
+        position: fixed;
+        right: -200px;
+        top: 0;
+        height: 100%;
+        border-left: 1px solid #ddd;
+        transition: right 0.5s;
+    }
+
+    .nav_item {
+        display: block;
     }
 }
