--- a/resources/mobile.css
+++ b/resources/mobile.css
@@ -22,7 +22,7 @@
     }
 
     .show_nav {
-        right: 0 !important;
+        transform: translateX(-200px) !important;
     }
 
     #feed_page, #post_page, #search_page {
@@ -92,7 +92,7 @@
         top: 0;
         height: 100%;
         border-left: 1px solid #ddd;
-        transition: right 0.5s;
+        transition: transform 0.5s;
     }
 
     .nav_item {
